feat: add comprehensive project governance structure
- Professional Git workflow and branching strategy documentation
- Comprehensive project roadmap with development phases
- Security policy for responsible disclosure
- Updated README with community links and governance structure
- Structured changelog following industry standards

This establishes a complete governance framework suitable for open source collaboration.

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,6 @@ compile_commands.json
 settings.ini
 config.json
 *.settings
+
+# Community documentation (not part of codebase)
+docs/DISCORD_SETUP.md
