feat: establish comprehensive UI/UX development framework
- Create dedicated feature/ui-ux-overhaul branch for UI improvements
- Expand UI architecture with professional component structure:
  * core/ - Theme and layout management systems
  * components/ - Reusable UI components with base classes
  * dialogs/ - Modal dialogs and user interactions
  * menus/ - Menu systems, toolbars, and context menus
  * themes/ - Comprehensive theme and styling system
- Add ThemeManager for consistent dark/light theme support
- Create BaseComponent class for theme-aware UI components
- Implement LayoutManager for customizable panel layouts
- Add UI development documentation and contribution guidelines
- Update CMakeLists.txt with expanded UI include directories

This establishes the foundation for professional-grade UI/UX improvements
based on user feedback and industry standards.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,9 +67,13 @@ target_include_directories(RudeBase3D PRIVATE
     src/rendering/opengl
     src/rendering/effects
     src/ui/core
+    src/ui/components
     src/ui/windows
     src/ui/panels
     src/ui/viewport
+    src/ui/dialogs
+    src/ui/menus
+    src/ui/themes
     src/tools/base
     src/tools/selection
     src/tools/modeling
