Integrates ECS system into core architecture
Adds Entity Component System support throughout the application by integrating ECS manager into the core system architecture.

Updates build configuration to include ECS module and establishes proper linking dependencies. Modifies core system to initialize, update, and manage ECS components with frame-based updates.

Refactors mesh vertex types to use namespaced definitions for better organization and type safety. Adds system update loop to main window with delta time calculation for consistent frame-rate independent updates.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ list(FILTER HEADERS EXCLUDE REGEX ".*_old\\.(cpp|h)$")
 
 # Add subdirectories for libraries
 add_subdirectory(src/core)
+add_subdirectory(src/ecs)
 add_subdirectory(src/gizmo)
 add_subdirectory(src/panels)
 add_subdirectory(src/toolbars)
@@ -88,6 +89,7 @@ add_executable(RudeBase3D ${SOURCES} ${HEADERS})
 target_include_directories(RudeBase3D PRIVATE 
     include
     include/core
+    include/ecs
     include/gizmo
     include/toolbars
     include/panels
@@ -95,6 +97,7 @@ target_include_directories(RudeBase3D PRIVATE
     include/input
     src
     src/core
+    src/ecs
     src/gizmo
     src/toolbars
     src/panels
@@ -155,6 +158,7 @@ target_link_libraries(RudeBase3D
     Qt6::OpenGLWidgets
     OpenGL::GL
     core
+    ecs
     gizmo
     panels
     toolbars
