gitignore: Add personal documentation files
- Exclude documentation_report.md (personal workflow file)
- Exclude scripts/doc_automation.py (personal automation script)

These files are for individual developer workflow and not
part of the shared codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,6 @@ config.json
 
 # Community documentation (not part of codebase)
 docs/DISCORD_SETUP.md
+# Personal documentation and workflow files
+documentation_report.md
+scripts/doc_automation.py
