Add Settings Dialog and UI Improvements
- Created SettingsDialog class with Qt MOC support
- Added Settings menu item to Edit menu (Ctrl+,)
- Integrated SettingsDialog into UIManager
- Removed theme picker from main toolbar (commented out)
- Updated CMakeLists.txt to include header files from include directory
- Simple dialog with placeholder content, ready for expansion
- Successfully builds and runs without errors

Phase 2: User Experience Improvements - Initial Settings Dialog Implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ file(GLOB_RECURSE SOURCES
 # Collect header files from organized directories  
 file(GLOB_RECURSE HEADERS
     "src/*.h"
+    "include/*.h"
     "include/*.hpp"
 )
 
