feat: Implement professional 3D modeling viewport with industry-standard grid and camera controls
✨ Major Features Added:
- Professional multi-level grid system with major/minor line hierarchy
- Industry-standard Maya-style camera controls (pan, zoom, rotate)
- Antialiased line rendering with GL_LINE_SMOOTH for professional quality
- Professional color schemes and viewport background

🎨 Visual Improvements:
- Multi-level grid: 10-unit major grid, 1-unit minor grid, origin highlighting
- Professional color hierarchy: major (0.4f gray), minor (0.25f gray), origin (0.6f gray)
- Clean professional background (0.15f gray)
- 1.5f professional line width with antialiasing
- Removed debug output for production-ready interface

🔧 Technical Enhancements:
- Enhanced GridSystem with professional rendering pipeline
- Improved Renderer with antialiased immediate mode line rendering
- Clean ViewportManager with professional OpenGL state management
- Production-quality code structure and error handling

🚀 Result: Complete transformation to professional 3D modeling application
matching Maya/Blender industry standards for viewport interaction and visual quality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,17 @@ else()
     set(GLEW_FOUND TRUE)
 endif()
 
+# Find GLFW
+message(STATUS "Looking for GLFW...")
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+
+# Add GLFW subdirectory
+add_subdirectory(third_party/glfw/glfw-3.4)
+message(STATUS "Found GLFW in third_party/glfw/glfw-3.4")
+
 # Set output directories
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -218,6 +229,7 @@ target_link_libraries(RudeBase3D
     Qt6::OpenGLWidgets
     OpenGL::GL
     ${GLEW_LIBRARIES}
+    glfw
     core
     ecs
     gizmo
