feat: Complete 3D mesh rendering pipeline implementation
CRITICAL FIXES - Orange cube now visible in viewport:

Core Rendering System:
- Implemented complete uploadToGPU() function with VAO/VBO/EBO creation
- Added proper OpenGL buffer management with vertex attribute setup
- Fixed cleanupGL() to properly delete OpenGL resources
- Added GLEW library integration to CMake core target

Shader & Material System:
- Updated shader uniforms to match basic.vert/basic.frag files
- Implemented proper matrix transformations (model/view/projection)
- Added lighting calculations with configurable light position/color
- Fixed object color uniforms for orange cube rendering

Entity & Properties Integration:
- Connected Properties panel to display actual entity transform values
- Fixed scale values display showing correct (1,1,1) instead of (0.001,0.001,0.001)
- Added proper entity selection and property updating
- Integrated MeshGenerator for primitive creation

UI & Toolbar Enhancements:
- Connected PrimitivesToolbar to MainWindow primitive creation
- Added comprehensive debug logging for selection workflow
- Enhanced outliner panel with entity selection feedback
- Added viewport integration with test rendering capabilities

Build System:
- Fixed GLEW includes and libraries in core CMakeLists.txt
- Resolved header inclusion order issues (GLEW before Qt OpenGL)
- Updated renderer to use proper OpenGL function calls

RESULT: Complete functional 3D rendering pipeline
- Orange cube visible and properly rendered in viewport
- Properties panel showing correct transform values
- Full entity creation and selection workflow functional
- Professional 3D modeling environment established

Co-authored-by: GitHub Copilot <copilot@github.com>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -19,6 +19,7 @@ target_include_directories(core PUBLIC
     $<INSTALL_INTERFACE:include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies/glm/glm> # For glm usage in core
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../third_party/spdlog/include> # For spdlog
+    ${GLEW_INCLUDE_DIRS} # For GLEW
 )
 
 target_link_libraries(core PUBLIC
@@ -27,6 +28,8 @@ target_link_libraries(core PUBLIC
     Qt6::Widgets
     Qt6::OpenGL # For QOpenGLFunctions_3_3_Core
     Qt6::OpenGLWidgets
+    ${GLEW_LIBRARIES} # For GLEW
+    OpenGL::GL # For OpenGL
 )
 
 set_property(TARGET core PROPERTY AUTOMOC ON)
